--- a/css/index.css
+++ b/css/index.css
@@ -82,13 +82,27 @@ body{
     }
 }
 /*tangtongsong导航结束*/
+#bj-container{
+    width: 100%;
+    margin: 0 auto;
+}
+
+#section0{
+    position: relative;
+    background-image: url("../time1.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    overflow: hidden;
+}
+#section0 img:first-child{
+    display: block;
+}
+
 .section{
     width: 100%;
-    height: 100vh;
     padding-bottom: 20px;
-}
-.section{
-    min-height: 700px;
+    min-height: 710px;
     height: auto;
 }
 .section hr{
