--- a/css/index.css
+++ b/css/index.css
@@ -87,14 +87,119 @@ body{
     margin: 0 auto;
 }
 
+/**欢迎文字*/
+#welcome{
+    font-size: 60px;
+    width:100%;
+    height: 100%;
+    padding:35vh 0 0;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    top:0;
+}
+#btn-my{
+    font-size: 20px;
+    display: none;
+}
+.p2{
+    font-size: 25px;
+    display: none;
+    letter-spacing: 1px
+}
+@media all and (max-width: 760px){
+    #btn-my span{
+        width: 200px;
+        height: 35px;
+        line-height: 35px;
+        font-size: 15px;
+    }
+    #welcome{
+        font-size: 40px;
+    }
+    .p2{
+        font-size: 20px;
+    }
+}
+.btn-my{
+    display: inline-block;
+    width: 150px;
+    height: 45px;
+    line-height: 45px;
+    border: 1px solid #5e5e5e;
+    border-radius: 3px;
+    cursor: pointer;
+    margin: 5px;
+}
+#btn-my span:nth-child(1){
+    border: 1px solid #fff;
+    background: #5e5e5e;
+    color: #fff;
+}
+#btn-my span:nth-child(2){
+    background: rgba(255,255,255,0.5);
+    color: #5e5e5e;
+}
 #section0{
     position: relative;
-    background-image: url("../time1.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
     overflow: hidden;
+    width: 100%;
+    padding-bottom: 20px;
+    min-height: 710px;
+    height: auto;
 }
+.bj-img{
+    width: 100%;
+    height:100%;
+    position: absolute;
+    top: 0;
+    left:0;
+    z-index: -1;
+}
+.bj-img li:nth-child(1){
+    background:url("../images/time2.jpg") no-repeat center;
+    background-size: cover;
+}
+.bj-img li:nth-child(2){
+     background:url("../images/time3.jpg") no-repeat center;
+     background-size: cover;
+ }
+.bj-img li:nth-child(3){
+    background:url("../images/time4.jpg") no-repeat center;
+    background-size: cover;
+}
+.bj-img li:nth-child(4){
+    background:url("../images/time1.jpg") no-repeat center;
+    background-size: cover;
+}
+.bj-img li{
+    position: absolute;
+    left:0;
+    top:0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    opacity: 0.5;
+}
+.bg-img li.show{
+    animation: fadescale 5s forwards;
+}
+@keyframes fadescale {
+    0%{
+        opacity: 1;
+        background: #000;
+        transform: scale(1);
+    }
+    50%{
+        opacity:1;
+        transform: scale(1.2);
+    }
+    100%{
+        opacity: 0.5;
+        transform: scale(1);
+    }
+}
+
 #section0 img:first-child{
     display: block;
 }
@@ -142,6 +247,18 @@ body{
 #section1{
     height: 80vh;
 }
+#section2 img{
+    width: 80px;
+    height: 80px;
+}
+#section2 .col-lg-3{
+    padding: 15px;
+}
+#section2 .col-lg-3 p:nth-child(2){
+    color: #E87E04;
+    margin: 20px;
+    font-weight: bold;
+}
 #section2{
     background: url("../images/section1.jpg") no-repeat center;
     background-attachment: fixed;
@@ -152,6 +269,7 @@ body{
     background-attachment: fixed;
 }
 #section6{
+    min-height: 600px;
     background: url("../images/section2.jpg") no-repeat center;
     background-attachment: fixed;
 }
@@ -188,7 +306,7 @@ body{
     text-align: center;
     line-height: 50px;
     border-radius: 50%;
-    background: #2aabd2;
+    background: #5e5e5e;
     position: absolute;
 }
 .pen .penLi:nth-child(1){
@@ -259,7 +377,7 @@ body{
     text-align: center;
     line-height: 40px;
     border-radius: 50%;
-    background: #2aabd2;
+    background: #5e5e5e;
     position: absolute;
 }
 .pen2 .penLi2:nth-child(1){
@@ -319,13 +437,19 @@ body{
 /*小层动画*/
 
 
-
+/*关于我*/
+#my-head{
+    width: 150px;
+    height: 150px;
+    margin:0 auto;
+    background: #000;
+    border-radius: 50%;
+}
 /*作品集*/
 #demo .relative{
     position: relative;
     width: 100%;
 }
-
 #demo .col-lg-3{
     padding: 10px;
     transition: all 0.3s cubic-bezier(0, 0, 0.49, 0.53);
@@ -334,6 +458,21 @@ body{
     padding: 0px;
     cursor: pointer;
 }
+.demo p:nth-child(1){
+    color: #E87E04;
+}
+.my-demo{
+    font-weight:bold;
+    font-size: 16px;
+    position: absolute;
+    top:0;
+    left: 0;
+    text-decoration: none;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+
 .demo{
     position: absolute;
     background: rgba(0,0,0,0.6);
@@ -341,8 +480,18 @@ body{
     left:0;
     width: 100%;
     height: 100%;
+    padding: 20px;
     padding-top:80px;
-    display: none;
+    color: #fff;
+    display: none;;
+}
+@media all and (max-width: 736px) {
+    .my{
+        font-size: 20px;
+    }
+    .demo{
+        padding-top: 30px;
+    }
 }
 .relative:hover .demo{
     display: block;
@@ -416,5 +565,13 @@ body{
         left: 90px;
     }
 }
-
+/*联系我*/
+.my-call{
+    display: inline-block;
+    padding: 2px;
+    border:1px solid #fff;
+    border-radius: 50%;
+    background: rgba(0,0,0,0.2);
+    cursor: pointer;
+}
 
